APIs/googleapis.com/displayvideo/v1/python-client/README.md
# openapi-client
Display & Video 360 API allows users to automate complex Display & Video 360 workflows, such as creating insertion orders and setting targeting options for individual line items.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://displayvideo.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://displayvideo.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.AdvertisersApi(api_client)
    advertiser_id = 'advertiser_id_example' # str | Required. The ID of the advertiser this asset belongs to.
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    create_asset_request = openapi_client.CreateAssetRequest() # CreateAssetRequest |  (optional)

    try:
        api_response = api_instance.displayvideo_advertisers_assets_upload(advertiser_id, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, create_asset_request=create_asset_request)
        print("The response of AdvertisersApi->displayvideo_advertisers_assets_upload:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling AdvertisersApi->displayvideo_advertisers_assets_upload: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://displayvideo.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AdvertisersApi* | [**displayvideo_advertisers_assets_upload**](docs/AdvertisersApi.md#displayvideo_advertisers_assets_upload) | **POST** /v1/advertisers/{advertiserId}/assets | 
*AdvertisersApi* | [**displayvideo_advertisers_audit**](docs/AdvertisersApi.md#displayvideo_advertisers_audit) | **GET** /v1/advertisers/{advertiserId}:audit | 
*AdvertisersApi* | [**displayvideo_advertisers_bulk_edit_advertiser_assigned_targeting_options**](docs/AdvertisersApi.md#displayvideo_advertisers_bulk_edit_advertiser_assigned_targeting_options) | **POST** /v1/advertisers/{advertiserId}:bulkEditAdvertiserAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_bulk_list_advertiser_assigned_targeting_options**](docs/AdvertisersApi.md#displayvideo_advertisers_bulk_list_advertiser_assigned_targeting_options) | **GET** /v1/advertisers/{advertiserId}:bulkListAdvertiserAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_bulk_list_campaign_assigned_targeting_options**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_bulk_list_campaign_assigned_targeting_options) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId}:bulkListCampaignAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_create**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_create) | **POST** /v1/advertisers/{advertiserId}/campaigns | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_delete) | **DELETE** /v1/advertisers/{advertiserId}/campaigns/{campaignId} | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_get**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_get) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId} | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_list**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_list) | **GET** /v1/advertisers/{advertiserId}/campaigns | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_patch) | **PATCH** /v1/advertisers/{advertiserId}/campaigns/{campaignId} | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_targeting_types_assigned_targeting_options_get**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_targeting_types_assigned_targeting_options_get) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideo_advertisers_campaigns_targeting_types_assigned_targeting_options_list**](docs/AdvertisersApi.md#displayvideo_advertisers_campaigns_targeting_types_assigned_targeting_options_list) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_channels_create**](docs/AdvertisersApi.md#displayvideo_advertisers_channels_create) | **POST** /v1/advertisers/{advertiserId}/channels | 
*AdvertisersApi* | [**displayvideo_advertisers_channels_list**](docs/AdvertisersApi.md#displayvideo_advertisers_channels_list) | **GET** /v1/advertisers/{advertiserId}/channels | 
*AdvertisersApi* | [**displayvideo_advertisers_channels_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_channels_patch) | **PATCH** /v1/advertisers/{advertiserId}/channels/{channelId} | 
*AdvertisersApi* | [**displayvideo_advertisers_channels_sites_bulk_edit**](docs/AdvertisersApi.md#displayvideo_advertisers_channels_sites_bulk_edit) | **POST** /v1/advertisers/{advertiserId}/channels/{channelId}/sites:bulkEdit | 
*AdvertisersApi* | [**displayvideo_advertisers_channels_sites_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_channels_sites_delete) | **DELETE** /v1/advertisers/{advertiserId}/channels/{channelId}/sites/{urlOrAppId} | 
*AdvertisersApi* | [**displayvideo_advertisers_channels_sites_list**](docs/AdvertisersApi.md#displayvideo_advertisers_channels_sites_list) | **GET** /v1/advertisers/{advertiserId}/channels/{channelId}/sites | 
*AdvertisersApi* | [**displayvideo_advertisers_channels_sites_replace**](docs/AdvertisersApi.md#displayvideo_advertisers_channels_sites_replace) | **POST** /v1/advertisers/{advertiserId}/channels/{channelId}/sites:replace | 
*AdvertisersApi* | [**displayvideo_advertisers_create**](docs/AdvertisersApi.md#displayvideo_advertisers_create) | **POST** /v1/advertisers | 
*AdvertisersApi* | [**displayvideo_advertisers_creatives_create**](docs/AdvertisersApi.md#displayvideo_advertisers_creatives_create) | **POST** /v1/advertisers/{advertiserId}/creatives | 
*AdvertisersApi* | [**displayvideo_advertisers_creatives_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_creatives_delete) | **DELETE** /v1/advertisers/{advertiserId}/creatives/{creativeId} | 
*AdvertisersApi* | [**displayvideo_advertisers_creatives_get**](docs/AdvertisersApi.md#displayvideo_advertisers_creatives_get) | **GET** /v1/advertisers/{advertiserId}/creatives/{creativeId} | 
*AdvertisersApi* | [**displayvideo_advertisers_creatives_list**](docs/AdvertisersApi.md#displayvideo_advertisers_creatives_list) | **GET** /v1/advertisers/{advertiserId}/creatives | 
*AdvertisersApi* | [**displayvideo_advertisers_creatives_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_creatives_patch) | **PATCH** /v1/advertisers/{advertiserId}/creatives/{creativeId} | 
*AdvertisersApi* | [**displayvideo_advertisers_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_delete) | **DELETE** /v1/advertisers/{advertiserId} | 
*AdvertisersApi* | [**displayvideo_advertisers_get**](docs/AdvertisersApi.md#displayvideo_advertisers_get) | **GET** /v1/advertisers/{advertiserId} | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_bulk_list_insertion_order_assigned_targeting_options**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_bulk_list_insertion_order_assigned_targeting_options) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}:bulkListInsertionOrderAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_create**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_create) | **POST** /v1/advertisers/{advertiserId}/insertionOrders | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_delete) | **DELETE** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_get**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_get) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_list**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_list) | **GET** /v1/advertisers/{advertiserId}/insertionOrders | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_patch) | **PATCH** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_targeting_types_assigned_targeting_options_get**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_targeting_types_assigned_targeting_options_get) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideo_advertisers_insertion_orders_targeting_types_assigned_targeting_options_list**](docs/AdvertisersApi.md#displayvideo_advertisers_insertion_orders_targeting_types_assigned_targeting_options_list) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_invoices_list**](docs/AdvertisersApi.md#displayvideo_advertisers_invoices_list) | **GET** /v1/advertisers/{advertiserId}/invoices | 
*AdvertisersApi* | [**displayvideo_advertisers_invoices_lookup_invoice_currency**](docs/AdvertisersApi.md#displayvideo_advertisers_invoices_lookup_invoice_currency) | **GET** /v1/advertisers/{advertiserId}/invoices:lookupInvoiceCurrency | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_bulk_edit_line_item_assigned_targeting_options**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_bulk_edit_line_item_assigned_targeting_options) | **POST** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}:bulkEditLineItemAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_bulk_list_line_item_assigned_targeting_options**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_bulk_list_line_item_assigned_targeting_options) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}:bulkListLineItemAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_create**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_create) | **POST** /v1/advertisers/{advertiserId}/lineItems | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_delete) | **DELETE** /v1/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_generate_default**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_generate_default) | **POST** /v1/advertisers/{advertiserId}/lineItems:generateDefault | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_get**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_get) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_list**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_list) | **GET** /v1/advertisers/{advertiserId}/lineItems | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_patch) | **PATCH** /v1/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_create**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_create) | **POST** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_delete) | **DELETE** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_get**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_get) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_list**](docs/AdvertisersApi.md#displayvideo_advertisers_line_items_targeting_types_assigned_targeting_options_list) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_list**](docs/AdvertisersApi.md#displayvideo_advertisers_list) | **GET** /v1/advertisers | 
*AdvertisersApi* | [**displayvideo_advertisers_location_lists_assigned_locations_bulk_edit**](docs/AdvertisersApi.md#displayvideo_advertisers_location_lists_assigned_locations_bulk_edit) | **POST** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations:bulkEdit | 
*AdvertisersApi* | [**displayvideo_advertisers_location_lists_assigned_locations_create**](docs/AdvertisersApi.md#displayvideo_advertisers_location_lists_assigned_locations_create) | **POST** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations | 
*AdvertisersApi* | [**displayvideo_advertisers_location_lists_assigned_locations_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_location_lists_assigned_locations_delete) | **DELETE** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations/{assignedLocationId} | 
*AdvertisersApi* | [**displayvideo_advertisers_location_lists_assigned_locations_list**](docs/AdvertisersApi.md#displayvideo_advertisers_location_lists_assigned_locations_list) | **GET** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations | 
*AdvertisersApi* | [**displayvideo_advertisers_location_lists_create**](docs/AdvertisersApi.md#displayvideo_advertisers_location_lists_create) | **POST** /v1/advertisers/{advertiserId}/locationLists | 
*AdvertisersApi* | [**displayvideo_advertisers_location_lists_list**](docs/AdvertisersApi.md#displayvideo_advertisers_location_lists_list) | **GET** /v1/advertisers/{advertiserId}/locationLists | 
*AdvertisersApi* | [**displayvideo_advertisers_location_lists_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_location_lists_patch) | **PATCH** /v1/advertisers/{advertiserId}/locationLists/{locationListId} | 
*AdvertisersApi* | [**displayvideo_advertisers_manual_triggers_activate**](docs/AdvertisersApi.md#displayvideo_advertisers_manual_triggers_activate) | **POST** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId}:activate | 
*AdvertisersApi* | [**displayvideo_advertisers_manual_triggers_create**](docs/AdvertisersApi.md#displayvideo_advertisers_manual_triggers_create) | **POST** /v1/advertisers/{advertiserId}/manualTriggers | 
*AdvertisersApi* | [**displayvideo_advertisers_manual_triggers_deactivate**](docs/AdvertisersApi.md#displayvideo_advertisers_manual_triggers_deactivate) | **POST** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId}:deactivate | 
*AdvertisersApi* | [**displayvideo_advertisers_manual_triggers_get**](docs/AdvertisersApi.md#displayvideo_advertisers_manual_triggers_get) | **GET** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId} | 
*AdvertisersApi* | [**displayvideo_advertisers_manual_triggers_list**](docs/AdvertisersApi.md#displayvideo_advertisers_manual_triggers_list) | **GET** /v1/advertisers/{advertiserId}/manualTriggers | 
*AdvertisersApi* | [**displayvideo_advertisers_manual_triggers_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_manual_triggers_patch) | **PATCH** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId} | 
*AdvertisersApi* | [**displayvideo_advertisers_negative_keyword_lists_create**](docs/AdvertisersApi.md#displayvideo_advertisers_negative_keyword_lists_create) | **POST** /v1/advertisers/{advertiserId}/negativeKeywordLists | 
*AdvertisersApi* | [**displayvideo_advertisers_negative_keyword_lists_list**](docs/AdvertisersApi.md#displayvideo_advertisers_negative_keyword_lists_list) | **GET** /v1/advertisers/{advertiserId}/negativeKeywordLists | 
*AdvertisersApi* | [**displayvideo_advertisers_negative_keyword_lists_negative_keywords_bulk_edit**](docs/AdvertisersApi.md#displayvideo_advertisers_negative_keyword_lists_negative_keywords_bulk_edit) | **POST** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords:bulkEdit | 
*AdvertisersApi* | [**displayvideo_advertisers_negative_keyword_lists_negative_keywords_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_negative_keyword_lists_negative_keywords_delete) | **DELETE** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords/{keywordValue} | 
*AdvertisersApi* | [**displayvideo_advertisers_negative_keyword_lists_negative_keywords_list**](docs/AdvertisersApi.md#displayvideo_advertisers_negative_keyword_lists_negative_keywords_list) | **GET** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords | 
*AdvertisersApi* | [**displayvideo_advertisers_negative_keyword_lists_negative_keywords_replace**](docs/AdvertisersApi.md#displayvideo_advertisers_negative_keyword_lists_negative_keywords_replace) | **POST** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords:replace | 
*AdvertisersApi* | [**displayvideo_advertisers_negative_keyword_lists_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_negative_keyword_lists_patch) | **PATCH** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId} | 
*AdvertisersApi* | [**displayvideo_advertisers_patch**](docs/AdvertisersApi.md#displayvideo_advertisers_patch) | **PATCH** /v1/advertisers/{advertiserId} | 
*AdvertisersApi* | [**displayvideo_advertisers_targeting_types_assigned_targeting_options_create**](docs/AdvertisersApi.md#displayvideo_advertisers_targeting_types_assigned_targeting_options_create) | **POST** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideo_advertisers_targeting_types_assigned_targeting_options_delete**](docs/AdvertisersApi.md#displayvideo_advertisers_targeting_types_assigned_targeting_options_delete) | **DELETE** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideo_advertisers_targeting_types_assigned_targeting_options_get**](docs/AdvertisersApi.md#displayvideo_advertisers_targeting_types_assigned_targeting_options_get) | **GET** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideo_advertisers_targeting_types_assigned_targeting_options_list**](docs/AdvertisersApi.md#displayvideo_advertisers_targeting_types_assigned_targeting_options_list) | **GET** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*CombinedAudiencesApi* | [**displayvideo_combined_audiences_get**](docs/CombinedAudiencesApi.md#displayvideo_combined_audiences_get) | **GET** /v1/combinedAudiences/{combinedAudienceId} | 
*CombinedAudiencesApi* | [**displayvideo_combined_audiences_list**](docs/CombinedAudiencesApi.md#displayvideo_combined_audiences_list) | **GET** /v1/combinedAudiences | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_create**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_create) | **POST** /v1/customBiddingAlgorithms | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_get**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_get) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId} | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_list**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_list) | **GET** /v1/customBiddingAlgorithms | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_patch**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_patch) | **PATCH** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId} | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_scripts_create**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_scripts_create) | **POST** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_scripts_get**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_scripts_get) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts/{customBiddingScriptId} | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_scripts_list**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_scripts_list) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts | 
*CustomBiddingAlgorithmsApi* | [**displayvideo_custom_bidding_algorithms_upload_script**](docs/CustomBiddingAlgorithmsApi.md#displayvideo_custom_bidding_algorithms_upload_script) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}:uploadScript | 
*CustomListsApi* | [**displayvideo_custom_lists_get**](docs/CustomListsApi.md#displayvideo_custom_lists_get) | **GET** /v1/customLists/{customListId} | 
*CustomListsApi* | [**displayvideo_custom_lists_list**](docs/CustomListsApi.md#displayvideo_custom_lists_list) | **GET** /v1/customLists | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideo_first_and_third_party_audiences_create**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideo_first_and_third_party_audiences_create) | **POST** /v1/firstAndThirdPartyAudiences | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideo_first_and_third_party_audiences_edit_customer_match_members**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideo_first_and_third_party_audiences_edit_customer_match_members) | **POST** /v1/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId}:editCustomerMatchMembers | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideo_first_and_third_party_audiences_get**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideo_first_and_third_party_audiences_get) | **GET** /v1/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId} | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideo_first_and_third_party_audiences_list**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideo_first_and_third_party_audiences_list) | **GET** /v1/firstAndThirdPartyAudiences | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideo_first_and_third_party_audiences_patch**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideo_first_and_third_party_audiences_patch) | **PATCH** /v1/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId} | 
*FloodlightGroupsApi* | [**displayvideo_floodlight_groups_get**](docs/FloodlightGroupsApi.md#displayvideo_floodlight_groups_get) | **GET** /v1/floodlightGroups/{floodlightGroupId} | 
*GoogleAudiencesApi* | [**displayvideo_google_audiences_get**](docs/GoogleAudiencesApi.md#displayvideo_google_audiences_get) | **GET** /v1/googleAudiences/{googleAudienceId} | 
*GoogleAudiencesApi* | [**displayvideo_google_audiences_list**](docs/GoogleAudiencesApi.md#displayvideo_google_audiences_list) | **GET** /v1/googleAudiences | 
*GuaranteedOrdersApi* | [**displayvideo_guaranteed_orders_create**](docs/GuaranteedOrdersApi.md#displayvideo_guaranteed_orders_create) | **POST** /v1/guaranteedOrders | 
*GuaranteedOrdersApi* | [**displayvideo_guaranteed_orders_edit_guaranteed_order_read_accessors**](docs/GuaranteedOrdersApi.md#displayvideo_guaranteed_orders_edit_guaranteed_order_read_accessors) | **POST** /v1/guaranteedOrders/{guaranteedOrderId}:editGuaranteedOrderReadAccessors | 
*GuaranteedOrdersApi* | [**displayvideo_guaranteed_orders_get**](docs/GuaranteedOrdersApi.md#displayvideo_guaranteed_orders_get) | **GET** /v1/guaranteedOrders/{guaranteedOrderId} | 
*GuaranteedOrdersApi* | [**displayvideo_guaranteed_orders_list**](docs/GuaranteedOrdersApi.md#displayvideo_guaranteed_orders_list) | **GET** /v1/guaranteedOrders | 
*GuaranteedOrdersApi* | [**displayvideo_guaranteed_orders_patch**](docs/GuaranteedOrdersApi.md#displayvideo_guaranteed_orders_patch) | **PATCH** /v1/guaranteedOrders/{guaranteedOrderId} | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_assigned_inventory_sources_bulk_edit**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_assigned_inventory_sources_bulk_edit) | **POST** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources:bulkEdit | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_assigned_inventory_sources_create**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_assigned_inventory_sources_create) | **POST** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_assigned_inventory_sources_delete**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_assigned_inventory_sources_delete) | **DELETE** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources/{assignedInventorySourceId} | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_assigned_inventory_sources_list**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_assigned_inventory_sources_list) | **GET** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_create**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_create) | **POST** /v1/inventorySourceGroups | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_delete**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_delete) | **DELETE** /v1/inventorySourceGroups/{inventorySourceGroupId} | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_get**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_get) | **GET** /v1/inventorySourceGroups/{inventorySourceGroupId} | 
*InventorySourceGroupsApi* | [**displayvideo_inventory_source_groups_list**](docs/InventorySourceGroupsApi.md#displayvideo_inventory_source_groups_list) | **GET** /v1/inventorySourceGroups | 
*InventorySourcesApi* | [**displayvideo_inventory_sources_create**](docs/InventorySourcesApi.md#displayvideo_inventory_sources_create) | **POST** /v1/inventorySources | 
*InventorySourcesApi* | [**displayvideo_inventory_sources_edit_inventory_source_read_write_accessors**](docs/InventorySourcesApi.md#displayvideo_inventory_sources_edit_inventory_source_read_write_accessors) | **POST** /v1/inventorySources/{inventorySourceId}:editInventorySourceReadWriteAccessors | 
*InventorySourcesApi* | [**displayvideo_inventory_sources_get**](docs/InventorySourcesApi.md#displayvideo_inventory_sources_get) | **GET** /v1/inventorySources/{inventorySourceId} | 
*InventorySourcesApi* | [**displayvideo_inventory_sources_list**](docs/InventorySourcesApi.md#displayvideo_inventory_sources_list) | **GET** /v1/inventorySources | 
*InventorySourcesApi* | [**displayvideo_inventory_sources_patch**](docs/InventorySourcesApi.md#displayvideo_inventory_sources_patch) | **PATCH** /v1/inventorySources/{inventorySourceId} | 
*MediaApi* | [**displayvideo_media_download**](docs/MediaApi.md#displayvideo_media_download) | **GET** /download/{resourceName} | 
*MediaApi* | [**displayvideo_media_upload**](docs/MediaApi.md#displayvideo_media_upload) | **POST** /media/{resourceName} | 
*PartnersApi* | [**displayvideo_partners_bulk_edit_partner_assigned_targeting_options**](docs/PartnersApi.md#displayvideo_partners_bulk_edit_partner_assigned_targeting_options) | **POST** /v1/partners/{partnerId}:bulkEditPartnerAssignedTargetingOptions | 
*PartnersApi* | [**displayvideo_partners_channels_create**](docs/PartnersApi.md#displayvideo_partners_channels_create) | **POST** /v1/partners/{partnerId}/channels | 
*PartnersApi* | [**displayvideo_partners_channels_list**](docs/PartnersApi.md#displayvideo_partners_channels_list) | **GET** /v1/partners/{partnerId}/channels | 
*PartnersApi* | [**displayvideo_partners_channels_patch**](docs/PartnersApi.md#displayvideo_partners_channels_patch) | **PATCH** /v1/partners/{partnerId}/channels/{channelId} | 
*PartnersApi* | [**displayvideo_partners_channels_sites_bulk_edit**](docs/PartnersApi.md#displayvideo_partners_channels_sites_bulk_edit) | **POST** /v1/partners/{partnerId}/channels/{channelId}/sites:bulkEdit | 
*PartnersApi* | [**displayvideo_partners_channels_sites_delete**](docs/PartnersApi.md#displayvideo_partners_channels_sites_delete) | **DELETE** /v1/partners/{partnerId}/channels/{channelId}/sites/{urlOrAppId} | 
*PartnersApi* | [**displayvideo_partners_channels_sites_list**](docs/PartnersApi.md#displayvideo_partners_channels_sites_list) | **GET** /v1/partners/{partnerId}/channels/{channelId}/sites | 
*PartnersApi* | [**displayvideo_partners_channels_sites_replace**](docs/PartnersApi.md#displayvideo_partners_channels_sites_replace) | **POST** /v1/partners/{partnerId}/channels/{channelId}/sites:replace | 
*PartnersApi* | [**displayvideo_partners_get**](docs/PartnersApi.md#displayvideo_partners_get) | **GET** /v1/partners/{partnerId} | 
*PartnersApi* | [**displayvideo_partners_list**](docs/PartnersApi.md#displayvideo_partners_list) | **GET** /v1/partners | 
*PartnersApi* | [**displayvideo_partners_targeting_types_assigned_targeting_options_create**](docs/PartnersApi.md#displayvideo_partners_targeting_types_assigned_targeting_options_create) | **POST** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*PartnersApi* | [**displayvideo_partners_targeting_types_assigned_targeting_options_delete**](docs/PartnersApi.md#displayvideo_partners_targeting_types_assigned_targeting_options_delete) | **DELETE** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*PartnersApi* | [**displayvideo_partners_targeting_types_assigned_targeting_options_get**](docs/PartnersApi.md#displayvideo_partners_targeting_types_assigned_targeting_options_get) | **GET** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*PartnersApi* | [**displayvideo_partners_targeting_types_assigned_targeting_options_list**](docs/PartnersApi.md#displayvideo_partners_targeting_types_assigned_targeting_options_list) | **GET** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*SdfdownloadtasksApi* | [**displayvideo_sdfdownloadtasks_create**](docs/SdfdownloadtasksApi.md#displayvideo_sdfdownloadtasks_create) | **POST** /v1/sdfdownloadtasks | 
*SdfdownloadtasksApi* | [**displayvideo_sdfdownloadtasks_operations_get**](docs/SdfdownloadtasksApi.md#displayvideo_sdfdownloadtasks_operations_get) | **GET** /v1/{name} | 
*TargetingTypesApi* | [**displayvideo_targeting_types_targeting_options_get**](docs/TargetingTypesApi.md#displayvideo_targeting_types_targeting_options_get) | **GET** /v1/targetingTypes/{targetingType}/targetingOptions/{targetingOptionId} | 
*TargetingTypesApi* | [**displayvideo_targeting_types_targeting_options_list**](docs/TargetingTypesApi.md#displayvideo_targeting_types_targeting_options_list) | **GET** /v1/targetingTypes/{targetingType}/targetingOptions | 
*TargetingTypesApi* | [**displayvideo_targeting_types_targeting_options_search**](docs/TargetingTypesApi.md#displayvideo_targeting_types_targeting_options_search) | **POST** /v1/targetingTypes/{targetingType}/targetingOptions:search | 
*UsersApi* | [**displayvideo_users_bulk_edit_assigned_user_roles**](docs/UsersApi.md#displayvideo_users_bulk_edit_assigned_user_roles) | **POST** /v1/users/{userId}:bulkEditAssignedUserRoles | 
*UsersApi* | [**displayvideo_users_create**](docs/UsersApi.md#displayvideo_users_create) | **POST** /v1/users | 
*UsersApi* | [**displayvideo_users_delete**](docs/UsersApi.md#displayvideo_users_delete) | **DELETE** /v1/users/{userId} | 
*UsersApi* | [**displayvideo_users_get**](docs/UsersApi.md#displayvideo_users_get) | **GET** /v1/users/{userId} | 
*UsersApi* | [**displayvideo_users_list**](docs/UsersApi.md#displayvideo_users_list) | **GET** /v1/users | 
*UsersApi* | [**displayvideo_users_patch**](docs/UsersApi.md#displayvideo_users_patch) | **PATCH** /v1/users/{userId} | 


## Documentation For Models

 - [ActiveViewVideoViewabilityMetricConfig](docs/ActiveViewVideoViewabilityMetricConfig.md)
 - [Adloox](docs/Adloox.md)
 - [Advertiser](docs/Advertiser.md)
 - [AdvertiserAdServerConfig](docs/AdvertiserAdServerConfig.md)
 - [AdvertiserCreativeConfig](docs/AdvertiserCreativeConfig.md)
 - [AdvertiserDataAccessConfig](docs/AdvertiserDataAccessConfig.md)
 - [AdvertiserGeneralConfig](docs/AdvertiserGeneralConfig.md)
 - [AdvertiserSdfConfig](docs/AdvertiserSdfConfig.md)
 - [AdvertiserTargetingConfig](docs/AdvertiserTargetingConfig.md)
 - [AgeRangeAssignedTargetingOptionDetails](docs/AgeRangeAssignedTargetingOptionDetails.md)
 - [AgeRangeTargetingOptionDetails](docs/AgeRangeTargetingOptionDetails.md)
 - [AppAssignedTargetingOptionDetails](docs/AppAssignedTargetingOptionDetails.md)
 - [AppCategoryAssignedTargetingOptionDetails](docs/AppCategoryAssignedTargetingOptionDetails.md)
 - [AppCategoryTargetingOptionDetails](docs/AppCategoryTargetingOptionDetails.md)
 - [Asset](docs/Asset.md)
 - [AssetAssociation](docs/AssetAssociation.md)
 - [AssignedInventorySource](docs/AssignedInventorySource.md)
 - [AssignedLocation](docs/AssignedLocation.md)
 - [AssignedTargetingOption](docs/AssignedTargetingOption.md)
 - [AssignedUserRole](docs/AssignedUserRole.md)
 - [AudienceGroupAssignedTargetingOptionDetails](docs/AudienceGroupAssignedTargetingOptionDetails.md)
 - [AudioContentTypeAssignedTargetingOptionDetails](docs/AudioContentTypeAssignedTargetingOptionDetails.md)
 - [AudioContentTypeTargetingOptionDetails](docs/AudioContentTypeTargetingOptionDetails.md)
 - [AudioVideoOffset](docs/AudioVideoOffset.md)
 - [AuditAdvertiserResponse](docs/AuditAdvertiserResponse.md)
 - [AuthorizedSellerStatusAssignedTargetingOptionDetails](docs/AuthorizedSellerStatusAssignedTargetingOptionDetails.md)
 - [AuthorizedSellerStatusTargetingOptionDetails](docs/AuthorizedSellerStatusTargetingOptionDetails.md)
 - [BiddingStrategy](docs/BiddingStrategy.md)
 - [BrowserAssignedTargetingOptionDetails](docs/BrowserAssignedTargetingOptionDetails.md)
 - [BrowserTargetingOptionDetails](docs/BrowserTargetingOptionDetails.md)
 - [BudgetSummary](docs/BudgetSummary.md)
 - [BulkEditAdvertiserAssignedTargetingOptionsRequest](docs/BulkEditAdvertiserAssignedTargetingOptionsRequest.md)
 - [BulkEditAdvertiserAssignedTargetingOptionsResponse](docs/BulkEditAdvertiserAssignedTargetingOptionsResponse.md)
 - [BulkEditAssignedInventorySourcesRequest](docs/BulkEditAssignedInventorySourcesRequest.md)
 - [BulkEditAssignedInventorySourcesResponse](docs/BulkEditAssignedInventorySourcesResponse.md)
 - [BulkEditAssignedLocationsRequest](docs/BulkEditAssignedLocationsRequest.md)
 - [BulkEditAssignedLocationsResponse](docs/BulkEditAssignedLocationsResponse.md)
 - [BulkEditAssignedUserRolesRequest](docs/BulkEditAssignedUserRolesRequest.md)
 - [BulkEditAssignedUserRolesResponse](docs/BulkEditAssignedUserRolesResponse.md)
 - [BulkEditLineItemAssignedTargetingOptionsRequest](docs/BulkEditLineItemAssignedTargetingOptionsRequest.md)
 - [BulkEditLineItemAssignedTargetingOptionsResponse](docs/BulkEditLineItemAssignedTargetingOptionsResponse.md)
 - [BulkEditNegativeKeywordsRequest](docs/BulkEditNegativeKeywordsRequest.md)
 - [BulkEditNegativeKeywordsResponse](docs/BulkEditNegativeKeywordsResponse.md)
 - [BulkEditPartnerAssignedTargetingOptionsRequest](docs/BulkEditPartnerAssignedTargetingOptionsRequest.md)
 - [BulkEditPartnerAssignedTargetingOptionsResponse](docs/BulkEditPartnerAssignedTargetingOptionsResponse.md)
 - [BulkEditSitesRequest](docs/BulkEditSitesRequest.md)
 - [BulkEditSitesResponse](docs/BulkEditSitesResponse.md)
 - [BulkListAdvertiserAssignedTargetingOptionsResponse](docs/BulkListAdvertiserAssignedTargetingOptionsResponse.md)
 - [BulkListCampaignAssignedTargetingOptionsResponse](docs/BulkListCampaignAssignedTargetingOptionsResponse.md)
 - [BulkListInsertionOrderAssignedTargetingOptionsResponse](docs/BulkListInsertionOrderAssignedTargetingOptionsResponse.md)
 - [BulkListLineItemAssignedTargetingOptionsResponse](docs/BulkListLineItemAssignedTargetingOptionsResponse.md)
 - [BusinessChainAssignedTargetingOptionDetails](docs/BusinessChainAssignedTargetingOptionDetails.md)
 - [BusinessChainSearchTerms](docs/BusinessChainSearchTerms.md)
 - [BusinessChainTargetingOptionDetails](docs/BusinessChainTargetingOptionDetails.md)
 - [Campaign](docs/Campaign.md)
 - [CampaignBudget](docs/CampaignBudget.md)
 - [CampaignFlight](docs/CampaignFlight.md)
 - [CampaignGoal](docs/CampaignGoal.md)
 - [CarrierAndIspAssignedTargetingOptionDetails](docs/CarrierAndIspAssignedTargetingOptionDetails.md)
 - [CarrierAndIspTargetingOptionDetails](docs/CarrierAndIspTargetingOptionDetails.md)
 - [CategoryAssignedTargetingOptionDetails](docs/CategoryAssignedTargetingOptionDetails.md)
 - [CategoryTargetingOptionDetails](docs/CategoryTargetingOptionDetails.md)
 - [Channel](docs/Channel.md)
 - [ChannelAssignedTargetingOptionDetails](docs/ChannelAssignedTargetingOptionDetails.md)
 - [CmHybridConfig](docs/CmHybridConfig.md)
 - [CmTrackingAd](docs/CmTrackingAd.md)
 - [CombinedAudience](docs/CombinedAudience.md)
 - [CombinedAudienceGroup](docs/CombinedAudienceGroup.md)
 - [CombinedAudienceTargetingSetting](docs/CombinedAudienceTargetingSetting.md)
 - [Consent](docs/Consent.md)
 - [ContactInfo](docs/ContactInfo.md)
 - [ContactInfoList](docs/ContactInfoList.md)
 - [ContentDurationAssignedTargetingOptionDetails](docs/ContentDurationAssignedTargetingOptionDetails.md)
 - [ContentDurationTargetingOptionDetails](docs/ContentDurationTargetingOptionDetails.md)
 - [ContentGenreAssignedTargetingOptionDetails](docs/ContentGenreAssignedTargetingOptionDetails.md)
 - [ContentGenreTargetingOptionDetails](docs/ContentGenreTargetingOptionDetails.md)
 - [ContentInstreamPositionAssignedTargetingOptionDetails](docs/ContentInstreamPositionAssignedTargetingOptionDetails.md)
 - [ContentInstreamPositionTargetingOptionDetails](docs/ContentInstreamPositionTargetingOptionDetails.md)
 - [ContentOutstreamPositionAssignedTargetingOptionDetails](docs/ContentOutstreamPositionAssignedTargetingOptionDetails.md)
 - [ContentOutstreamPositionTargetingOptionDetails](docs/ContentOutstreamPositionTargetingOptionDetails.md)
 - [ContentStreamTypeAssignedTargetingOptionDetails](docs/ContentStreamTypeAssignedTargetingOptionDetails.md)
 - [ContentStreamTypeTargetingOptionDetails](docs/ContentStreamTypeTargetingOptionDetails.md)
 - [ConversionCountingConfig](docs/ConversionCountingConfig.md)
 - [CounterEvent](docs/CounterEvent.md)
 - [CreateAssetRequest](docs/CreateAssetRequest.md)
 - [CreateAssetResponse](docs/CreateAssetResponse.md)
 - [CreateAssignedTargetingOptionsRequest](docs/CreateAssignedTargetingOptionsRequest.md)
 - [CreateSdfDownloadTaskRequest](docs/CreateSdfDownloadTaskRequest.md)
 - [Creative](docs/Creative.md)
 - [CreativeConfig](docs/CreativeConfig.md)
 - [CustomBiddingAlgorithm](docs/CustomBiddingAlgorithm.md)
 - [CustomBiddingModelReadinessState](docs/CustomBiddingModelReadinessState.md)
 - [CustomBiddingScript](docs/CustomBiddingScript.md)
 - [CustomBiddingScriptRef](docs/CustomBiddingScriptRef.md)
 - [CustomList](docs/CustomList.md)
 - [CustomListGroup](docs/CustomListGroup.md)
 - [CustomListTargetingSetting](docs/CustomListTargetingSetting.md)
 - [DateRange](docs/DateRange.md)
 - [DayAndTimeAssignedTargetingOptionDetails](docs/DayAndTimeAssignedTargetingOptionDetails.md)
 - [DeleteAssignedTargetingOptionsRequest](docs/DeleteAssignedTargetingOptionsRequest.md)
 - [DeviceMakeModelAssignedTargetingOptionDetails](docs/DeviceMakeModelAssignedTargetingOptionDetails.md)
 - [DeviceMakeModelTargetingOptionDetails](docs/DeviceMakeModelTargetingOptionDetails.md)
 - [DeviceTypeAssignedTargetingOptionDetails](docs/DeviceTypeAssignedTargetingOptionDetails.md)
 - [DeviceTypeTargetingOptionDetails](docs/DeviceTypeTargetingOptionDetails.md)
 - [DigitalContentLabelAssignedTargetingOptionDetails](docs/DigitalContentLabelAssignedTargetingOptionDetails.md)
 - [DigitalContentLabelTargetingOptionDetails](docs/DigitalContentLabelTargetingOptionDetails.md)
 - [Dimensions](docs/Dimensions.md)
 - [DoubleVerify](docs/DoubleVerify.md)
 - [DoubleVerifyAppStarRating](docs/DoubleVerifyAppStarRating.md)
 - [DoubleVerifyBrandSafetyCategories](docs/DoubleVerifyBrandSafetyCategories.md)
 - [DoubleVerifyDisplayViewability](docs/DoubleVerifyDisplayViewability.md)
 - [DoubleVerifyFraudInvalidTraffic](docs/DoubleVerifyFraudInvalidTraffic.md)
 - [DoubleVerifyVideoViewability](docs/DoubleVerifyVideoViewability.md)
 - [EditCustomerMatchMembersRequest](docs/EditCustomerMatchMembersRequest.md)
 - [EditCustomerMatchMembersResponse](docs/EditCustomerMatchMembersResponse.md)
 - [EditGuaranteedOrderReadAccessorsRequest](docs/EditGuaranteedOrderReadAccessorsRequest.md)
 - [EditGuaranteedOrderReadAccessorsResponse](docs/EditGuaranteedOrderReadAccessorsResponse.md)
 - [EditInventorySourceReadWriteAccessorsRequest](docs/EditInventorySourceReadWriteAccessorsRequest.md)
 - [EditInventorySourceReadWriteAccessorsRequestAdvertisersUpdate](docs/EditInventorySourceReadWriteAccessorsRequestAdvertisersUpdate.md)
 - [EnvironmentAssignedTargetingOptionDetails](docs/EnvironmentAssignedTargetingOptionDetails.md)
 - [EnvironmentTargetingOptionDetails](docs/EnvironmentTargetingOptionDetails.md)
 - [ExchangeAssignedTargetingOptionDetails](docs/ExchangeAssignedTargetingOptionDetails.md)
 - [ExchangeConfig](docs/ExchangeConfig.md)
 - [ExchangeConfigEnabledExchange](docs/ExchangeConfigEnabledExchange.md)
 - [ExchangeReviewStatus](docs/ExchangeReviewStatus.md)
 - [ExchangeTargetingOptionDetails](docs/ExchangeTargetingOptionDetails.md)
 - [ExitEvent](docs/ExitEvent.md)
 - [FirstAndThirdPartyAudience](docs/FirstAndThirdPartyAudience.md)
 - [FirstAndThirdPartyAudienceGroup](docs/FirstAndThirdPartyAudienceGroup.md)
 - [FirstAndThirdPartyAudienceTargetingSetting](docs/FirstAndThirdPartyAudienceTargetingSetting.md)
 - [FixedBidStrategy](docs/FixedBidStrategy.md)
 - [FloodlightGroup](docs/FloodlightGroup.md)
 - [FrequencyCap](docs/FrequencyCap.md)
 - [GenderAssignedTargetingOptionDetails](docs/GenderAssignedTargetingOptionDetails.md)
 - [GenderTargetingOptionDetails](docs/GenderTargetingOptionDetails.md)
 - [GenerateDefaultLineItemRequest](docs/GenerateDefaultLineItemRequest.md)
 - [GeoRegionAssignedTargetingOptionDetails](docs/GeoRegionAssignedTargetingOptionDetails.md)
 - [GeoRegionSearchTerms](docs/GeoRegionSearchTerms.md)
 - [GeoRegionTargetingOptionDetails](docs/GeoRegionTargetingOptionDetails.md)
 - [GoogleAudience](docs/GoogleAudience.md)
 - [GoogleAudienceGroup](docs/GoogleAudienceGroup.md)
 - [GoogleAudienceTargetingSetting](docs/GoogleAudienceTargetingSetting.md)
 - [GoogleBytestreamMedia](docs/GoogleBytestreamMedia.md)
 - [GuaranteedOrder](docs/GuaranteedOrder.md)
 - [GuaranteedOrderStatus](docs/GuaranteedOrderStatus.md)
 - [HouseholdIncomeAssignedTargetingOptionDetails](docs/HouseholdIncomeAssignedTargetingOptionDetails.md)
 - [HouseholdIncomeTargetingOptionDetails](docs/HouseholdIncomeTargetingOptionDetails.md)
 - [IdFilter](docs/IdFilter.md)
 - [InsertionOrder](docs/InsertionOrder.md)
 - [InsertionOrderBudget](docs/InsertionOrderBudget.md)
 - [InsertionOrderBudgetSegment](docs/InsertionOrderBudgetSegment.md)
 - [IntegralAdScience](docs/IntegralAdScience.md)
 - [IntegrationDetails](docs/IntegrationDetails.md)
 - [InventorySource](docs/InventorySource.md)
 - [InventorySourceAccessors](docs/InventorySourceAccessors.md)
 - [InventorySourceAccessorsAdvertiserAccessors](docs/InventorySourceAccessorsAdvertiserAccessors.md)
 - [InventorySourceAccessorsPartnerAccessor](docs/InventorySourceAccessorsPartnerAccessor.md)
 - [InventorySourceAssignedTargetingOptionDetails](docs/InventorySourceAssignedTargetingOptionDetails.md)
 - [InventorySourceDisplayCreativeConfig](docs/InventorySourceDisplayCreativeConfig.md)
 - [InventorySourceFilter](docs/InventorySourceFilter.md)
 - [InventorySourceGroup](docs/InventorySourceGroup.md)
 - [InventorySourceGroupAssignedTargetingOptionDetails](docs/InventorySourceGroupAssignedTargetingOptionDetails.md)
 - [InventorySourceStatus](docs/InventorySourceStatus.md)
 - [InventorySourceVideoCreativeConfig](docs/InventorySourceVideoCreativeConfig.md)
 - [Invoice](docs/Invoice.md)
 - [KeywordAssignedTargetingOptionDetails](docs/KeywordAssignedTargetingOptionDetails.md)
 - [LanguageAssignedTargetingOptionDetails](docs/LanguageAssignedTargetingOptionDetails.md)
 - [LanguageTargetingOptionDetails](docs/LanguageTargetingOptionDetails.md)
 - [LineItem](docs/LineItem.md)
 - [LineItemBudget](docs/LineItemBudget.md)
 - [LineItemFlight](docs/LineItemFlight.md)
 - [ListAdvertiserAssignedTargetingOptionsResponse](docs/ListAdvertiserAssignedTargetingOptionsResponse.md)
 - [ListAdvertisersResponse](docs/ListAdvertisersResponse.md)
 - [ListAssignedInventorySourcesResponse](docs/ListAssignedInventorySourcesResponse.md)
 - [ListAssignedLocationsResponse](docs/ListAssignedLocationsResponse.md)
 - [ListCampaignAssignedTargetingOptionsResponse](docs/ListCampaignAssignedTargetingOptionsResponse.md)
 - [ListCampaignsResponse](docs/ListCampaignsResponse.md)
 - [ListChannelsResponse](docs/ListChannelsResponse.md)
 - [ListCombinedAudiencesResponse](docs/ListCombinedAudiencesResponse.md)
 - [ListCreativesResponse](docs/ListCreativesResponse.md)
 - [ListCustomBiddingAlgorithmsResponse](docs/ListCustomBiddingAlgorithmsResponse.md)
 - [ListCustomBiddingScriptsResponse](docs/ListCustomBiddingScriptsResponse.md)
 - [ListCustomListsResponse](docs/ListCustomListsResponse.md)
 - [ListFirstAndThirdPartyAudiencesResponse](docs/ListFirstAndThirdPartyAudiencesResponse.md)
 - [ListGoogleAudiencesResponse](docs/ListGoogleAudiencesResponse.md)
 - [ListGuaranteedOrdersResponse](docs/ListGuaranteedOrdersResponse.md)
 - [ListInsertionOrderAssignedTargetingOptionsResponse](docs/ListInsertionOrderAssignedTargetingOptionsResponse.md)
 - [ListInsertionOrdersResponse](docs/ListInsertionOrdersResponse.md)
 - [ListInventorySourceGroupsResponse](docs/ListInventorySourceGroupsResponse.md)
 - [ListInventorySourcesResponse](docs/ListInventorySourcesResponse.md)
 - [ListInvoicesResponse](docs/ListInvoicesResponse.md)
 - [ListLineItemAssignedTargetingOptionsResponse](docs/ListLineItemAssignedTargetingOptionsResponse.md)
 - [ListLineItemsResponse](docs/ListLineItemsResponse.md)
 - [ListLocationListsResponse](docs/ListLocationListsResponse.md)
 - [ListManualTriggersResponse](docs/ListManualTriggersResponse.md)
 - [ListNegativeKeywordListsResponse](docs/ListNegativeKeywordListsResponse.md)
 - [ListNegativeKeywordsResponse](docs/ListNegativeKeywordsResponse.md)
 - [ListPartnerAssignedTargetingOptionsResponse](docs/ListPartnerAssignedTargetingOptionsResponse.md)
 - [ListPartnersResponse](docs/ListPartnersResponse.md)
 - [ListSitesResponse](docs/ListSitesResponse.md)
 - [ListTargetingOptionsResponse](docs/ListTargetingOptionsResponse.md)
 - [ListUsersResponse](docs/ListUsersResponse.md)
 - [LocationList](docs/LocationList.md)
 - [LookbackWindow](docs/LookbackWindow.md)
 - [LookupInvoiceCurrencyResponse](docs/LookupInvoiceCurrencyResponse.md)
 - [ManualTrigger](docs/ManualTrigger.md)
 - [MaximizeSpendBidStrategy](docs/MaximizeSpendBidStrategy.md)
 - [MeasurementConfig](docs/MeasurementConfig.md)
 - [MobileApp](docs/MobileApp.md)
 - [MobileDeviceIdList](docs/MobileDeviceIdList.md)
 - [ModelDate](docs/ModelDate.md)
 - [Money](docs/Money.md)
 - [NativeContentPositionAssignedTargetingOptionDetails](docs/NativeContentPositionAssignedTargetingOptionDetails.md)
 - [NativeContentPositionTargetingOptionDetails](docs/NativeContentPositionTargetingOptionDetails.md)
 - [NegativeKeyword](docs/NegativeKeyword.md)
 - [NegativeKeywordList](docs/NegativeKeywordList.md)
 - [NegativeKeywordListAssignedTargetingOptionDetails](docs/NegativeKeywordListAssignedTargetingOptionDetails.md)
 - [ObaIcon](docs/ObaIcon.md)
 - [OmidAssignedTargetingOptionDetails](docs/OmidAssignedTargetingOptionDetails.md)
 - [OmidTargetingOptionDetails](docs/OmidTargetingOptionDetails.md)
 - [OnScreenPositionAssignedTargetingOptionDetails](docs/OnScreenPositionAssignedTargetingOptionDetails.md)
 - [OnScreenPositionTargetingOptionDetails](docs/OnScreenPositionTargetingOptionDetails.md)
 - [OperatingSystemAssignedTargetingOptionDetails](docs/OperatingSystemAssignedTargetingOptionDetails.md)
 - [OperatingSystemTargetingOptionDetails](docs/OperatingSystemTargetingOptionDetails.md)
 - [Operation](docs/Operation.md)
 - [Pacing](docs/Pacing.md)
 - [ParentEntityFilter](docs/ParentEntityFilter.md)
 - [ParentalStatusAssignedTargetingOptionDetails](docs/ParentalStatusAssignedTargetingOptionDetails.md)
 - [ParentalStatusTargetingOptionDetails](docs/ParentalStatusTargetingOptionDetails.md)
 - [Partner](docs/Partner.md)
 - [PartnerAdServerConfig](docs/PartnerAdServerConfig.md)
 - [PartnerCost](docs/PartnerCost.md)
 - [PartnerDataAccessConfig](docs/PartnerDataAccessConfig.md)
 - [PartnerGeneralConfig](docs/PartnerGeneralConfig.md)
 - [PartnerRevenueModel](docs/PartnerRevenueModel.md)
 - [PerformanceGoal](docs/PerformanceGoal.md)
 - [PerformanceGoalBidStrategy](docs/PerformanceGoalBidStrategy.md)
 - [PoiAssignedTargetingOptionDetails](docs/PoiAssignedTargetingOptionDetails.md)
 - [PoiSearchTerms](docs/PoiSearchTerms.md)
 - [PoiTargetingOptionDetails](docs/PoiTargetingOptionDetails.md)
 - [PrismaConfig](docs/PrismaConfig.md)
 - [PrismaCpeCode](docs/PrismaCpeCode.md)
 - [ProximityLocationListAssignedTargetingOptionDetails](docs/ProximityLocationListAssignedTargetingOptionDetails.md)
 - [PublisherReviewStatus](docs/PublisherReviewStatus.md)
 - [RateDetails](docs/RateDetails.md)
 - [RegionalLocationListAssignedTargetingOptionDetails](docs/RegionalLocationListAssignedTargetingOptionDetails.md)
 - [ReplaceNegativeKeywordsRequest](docs/ReplaceNegativeKeywordsRequest.md)
 - [ReplaceNegativeKeywordsResponse](docs/ReplaceNegativeKeywordsResponse.md)
 - [ReplaceSitesRequest](docs/ReplaceSitesRequest.md)
 - [ReplaceSitesResponse](docs/ReplaceSitesResponse.md)
 - [ReviewStatusInfo](docs/ReviewStatusInfo.md)
 - [ScriptError](docs/ScriptError.md)
 - [SdfConfig](docs/SdfConfig.md)
 - [SdfDownloadTask](docs/SdfDownloadTask.md)
 - [SdfDownloadTaskMetadata](docs/SdfDownloadTaskMetadata.md)
 - [SearchTargetingOptionsRequest](docs/SearchTargetingOptionsRequest.md)
 - [SearchTargetingOptionsResponse](docs/SearchTargetingOptionsResponse.md)
 - [SensitiveCategoryAssignedTargetingOptionDetails](docs/SensitiveCategoryAssignedTargetingOptionDetails.md)
 - [SensitiveCategoryTargetingOptionDetails](docs/SensitiveCategoryTargetingOptionDetails.md)
 - [Site](docs/Site.md)
 - [Status](docs/Status.md)
 - [SubExchangeAssignedTargetingOptionDetails](docs/SubExchangeAssignedTargetingOptionDetails.md)
 - [SubExchangeTargetingOptionDetails](docs/SubExchangeTargetingOptionDetails.md)
 - [TargetingExpansionConfig](docs/TargetingExpansionConfig.md)
 - [TargetingOption](docs/TargetingOption.md)
 - [ThirdPartyOnlyConfig](docs/ThirdPartyOnlyConfig.md)
 - [ThirdPartyUrl](docs/ThirdPartyUrl.md)
 - [ThirdPartyVerifierAssignedTargetingOptionDetails](docs/ThirdPartyVerifierAssignedTargetingOptionDetails.md)
 - [TimeRange](docs/TimeRange.md)
 - [TimerEvent](docs/TimerEvent.md)
 - [TrackingFloodlightActivityConfig](docs/TrackingFloodlightActivityConfig.md)
 - [Transcode](docs/Transcode.md)
 - [UniversalAdId](docs/UniversalAdId.md)
 - [UrlAssignedTargetingOptionDetails](docs/UrlAssignedTargetingOptionDetails.md)
 - [User](docs/User.md)
 - [UserRewardedContentAssignedTargetingOptionDetails](docs/UserRewardedContentAssignedTargetingOptionDetails.md)
 - [UserRewardedContentTargetingOptionDetails](docs/UserRewardedContentTargetingOptionDetails.md)
 - [VideoPlayerSizeAssignedTargetingOptionDetails](docs/VideoPlayerSizeAssignedTargetingOptionDetails.md)
 - [VideoPlayerSizeTargetingOptionDetails](docs/VideoPlayerSizeTargetingOptionDetails.md)
 - [ViewabilityAssignedTargetingOptionDetails](docs/ViewabilityAssignedTargetingOptionDetails.md)
 - [ViewabilityTargetingOptionDetails](docs/ViewabilityTargetingOptionDetails.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/display-video**: Create, see, edit, and permanently delete your Display & Video 360 entities and reports
 - **https://www.googleapis.com/auth/display-video-mediaplanning**: Create, see, and edit Display & Video 360 Campaign entities and see billing invoices
 - **https://www.googleapis.com/auth/display-video-user-management**: Private Service: https://www.googleapis.com/auth/display-video-user-management
 - **https://www.googleapis.com/auth/doubleclickbidmanager**: View and manage your reports in DoubleClick Bid Manager

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/display-video**: Create, see, edit, and permanently delete your Display & Video 360 entities and reports
 - **https://www.googleapis.com/auth/display-video-mediaplanning**: Create, see, and edit Display & Video 360 Campaign entities and see billing invoices
 - **https://www.googleapis.com/auth/display-video-user-management**: Private Service: https://www.googleapis.com/auth/display-video-user-management
 - **https://www.googleapis.com/auth/doubleclickbidmanager**: View and manage your reports in DoubleClick Bid Manager


## Author




